--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,9 @@ dependencies:
   firebase_core: ^0.4.0
   provider: ^4.3.2+2
   flutter_spinkit: ^4.1.2+1
+  charts_common: ^0.8.1
+  charts_flutter: ^0.8.1
+  flutter_sparkline: ^0.1.0
   
 
 dev_dependencies:
